14056
```scala
// bug.txt 
object Scope { 
  implicit def stringToKittens(x : String) = new { def kittens = "kittens" }
}

import Scope.stringToKittens
"puppies".kittens
```
```scala
$$ scala -i bug.txt 
Loading bug.txt...
defined module Scope
import Scope.stringToKittens
<console>:5: error: value kittens is not a member of java.lang.String
       "puppies".kittens
                 ^
```
It works in the compiler.
